// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Snapshot > CustomColor 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorPrevious_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > CustomSize 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeLg_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > CustomType 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="reset"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > Default 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > Disabled 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    disabled=""
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > Enabled 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > FullWidth 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63 _ButtonFullWidth_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    />
  </button>
</div>
`;

exports[`Button Snapshot > WithInfoAsPlainText 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    >
      100% kostenlos
    </span>
  </button>
</div>
`;

exports[`Button Snapshot > WithInfoAsTagText 1`] = `
<div>
  <button
    class="_Button_078f63 _ButtonSizeMd_078f63 _ButtonColorNext_078f63"
    data-testid="button"
    type="button"
  >
    <span
      class="_ButtonText_078f63"
    >
      Custom button with or without 
      <b>
        info
      </b>
    </span>
    <span
      class="_ButtonInfo_078f63"
    >
      <i>
        100%
      </i>
       kostenlos
    </span>
  </button>
</div>
`;
